Upgraded angular, fixed some hacky stuff and fixed visibility on Android

--- a/gameboy-client/src/app/default/default.component.scss
+++ b/gameboy-client/src/app/default/default.component.scss
@@ -53,17 +53,3 @@
     }
   }
 }
-
-.portrait {
-  width: 100%;
-  height: 100%;
-  max-width: 200px;
-  max-height: 200px;
-  padding-top: 100%;
-  border-radius: 50%;
-  display: block;
-  background-position-x: 50%;
-  background-position-y: 50%;
-  background-image: url("/assets/img/alex.jpg");
-  background-size: 120% 120%;
-}
